[workspace]
members = [
    # base libraries
    "crates/core_executor",
    "crates/input",
    "crates/model",
    "crates/obj-parser",
    "crates/plugin_loader",
    "crates/render",
    "crates/world",

    # plugins: these should not be depended upon by anything other than binaries, indirectly
    "crates/plugins/tui_renderer_plugin",
    "crates/plugins/sdl2_input_plugin",
    "crates/plugins/world_update_plugin",

    # binaries
    "crates/bin/nshell",
]
