[workspace]
members = [
    # base libraries
    "crates/core_executor",
    "crates/input",
    "crates/models",
    "crates/network",
    "crates/obj-parser",
    "crates/plugin_loader",
    "crates/render",
    "crates/world",
    "crates/platform",
    "crates/font-loader",

    # plugins: these should not be depended upon by anything other than binaries, indirectly
    "crates/plugins/ash_renderer_plugin",
    "crates/plugins/asset_loader_plugin",
    "crates/plugins/tui_renderer_plugin",
    "crates/plugins/world_update_plugin",
    "crates/plugins/world_render_update_plugin",

    # binaries
    "crates/bin/nshell",

]
exclude = [
    # shaders
    "assets/shaders",
]

