[workspace]
members = [
    # base libraries
    "crates/core_executor",
    "crates/font-loader",
    "crates/logger",
    "crates/input",
    "crates/gfx",
    "crates/network",
    "crates/obj-parser",
    "crates/platform",
    "crates/plugin_loader",
    "crates/plugin_self",
    "crates/render",
    "crates/world",
    "crates/shader_objects",
    "crates/wat-cpu",

    # plugins: these should not be depended upon by anything other than binaries, indirectly
    "crates/plugins/abc_plugin",
    "crates/plugins/ash_renderer_plugin",
    "crates/plugins/ash_renderer_plugin",
    "crates/plugins/asset_loader_plugin",
    "crates/plugins/tui_renderer_plugin",
    "crates/plugins/world_update_plugin",
    "crates/plugins/net_sync_plugin",

    # binaries
    "crates/bin/nshell",

    "xtask",
]
exclude = [
    # shaders
    "assets/shaders",
]

[profile.release]
# lto leads to segfaults in vulkan libs, need to investigate
lto = true
strip = true
incremental = true

# turn on debug info
# debug = true

# Individual crates "inherit dependencies that are shared.
# plugins can depend on crates.
#
# Shared dependencies should be moved here to keep crate deps in sync across all crates.
[workspace.dependencies]
ash = "0.37.2"
ash-window = "0.11.0" # lock on 0.11 for now
async-channel = "1.8.0"
async-lock = "2.5.0"
async-io = "1.9.0"
async-net = "1.7.0"
async-trait = "0.1"
bitvec = { version = "1.0.1" }
bytemuck = { version = "1.12.1", features = ["derive", "extern_crate_std"] }
cstr = "0.2.10"
duct = "0.13.6"
futures-lite = "1.12.0"
function_name = "0.3"
glam = { version = "0.22", default-features = false, features = ["libm", "bytemuck"] }
histogram = "0.6.9" # lock in 0.6.9 for now
image = "0.24.3"
libloading = "0.7"
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
rapier3d = "0.17.2"
raw-window-handle = "0.4.2" # lock on 0.4.2 for now
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.9"
sdl2 = { version = "0.35.2", features = ["raw-window-handle", "bundled"] }
spirv-reflect = "0.2.3"
structopt = "0.3"
tempdir = "0.3.7"
thiserror = "1"
zstd = "0.12.2"
