[workspace]
members = [

    # builds the shaders
    "rust_shader_builder",

    # individual shader crates
    "shaders/skybox_vertex",
    "shaders/skybox_fragment",
    "shaders/default_vertex",
    "shaders/default_fragment",
    "shaders/debug_mesh_vertex",
    "shaders/debug_mesh_fragment",
]
# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[workspace.dependencies]
shader_objects = { path = "../../crates/shader_objects" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu" }
