[package]
name = "core_executor"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "aos_bench"
harness = false

[dependencies]
csv = "1.2.1"
async-std = { version = "1.12", features = ["attributes"]}
thiserror = "1.0.33"
async-executor = "1.4.1"
async-channel = "1.7.1"
async-oneshot = "0.5.0"
core_affinity = "0.7.2"
futures-lite = "1.12"
criterion = "0.4"

[dev-dependencies]
futures-util = "0.3.23"
smol = "1.3.0"
smol-potat = "1.1.2"
