[package]
name = "core_executor"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "aos_bench"
harness = false

[dependencies]
# csv = "1.2.1"

wat-cpu = { path = "../wat-cpu" }

thiserror = "1.0.33"
async-executor = "1.4.1"
async-channel = "1.7.1"
async-oneshot = "0.5.0"
core_affinity = "0.8"
futures-lite = "1.12"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"]}
futures-util = "0.3.23"
smol = "1.3.0"
smol-potat = "1.1.2"
criterion = "0.4"
