[package]
name = "heks"
version = "0.10.3"
description = "A fork of (A fast, minimal, and ergonomic entity-component-system library)"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ralith/heks"
readme = "README.md"
keywords = ["ecs", "entity"]
categories = ["data-structures", "game-engines", "no-std"]
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = []
# Enables derive(Bundle)
macros = ["heks-macros", "lazy_static"]
# Enables the serialize::column module
column-serialize = ["serde"]
# Enables the serialize::row module
row-serialize = ["serde"]

[dependencies]
serde = { version = "1.0.117", default-features = false, optional = true }
stable-typeid = { path = "../stable-typeid" }
heks-macros = { path = "../heks-macros", optional = true }
hashbrown = { version = "0.13.1", default-features = false, features = ["ahash", "inline-more"] }
lazy_static = { version = "1.4.0", optional = true, features = ["spin_no_std"] }
spin = { version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
bencher = "0.1.5"
rand = "0.8.3"
trybuild = "1.0.23"
serde = { version = "1.0.117", features = ["derive"] }
serde_test = "1.0.117"

[[bench]]
name = "bench"
harness = false
required-features = ["macros"]

[profile.release]
debug = true
