[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.34"
image = { version = "0.24.3", default-features = false, features=["png"] }
nalgebra = "0.32.1"
obj-parser = { path = "../obj-parser" }
