[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytemuck = { version = "1.12.1", features = ["derive", "extern_crate_std"] }
futures-lite = "1.12.0"
thiserror = "1.0.32"
