[package]
name = "plugin_loader"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: consider async-ffi = "0.4.0"
core_executor = { path = "../core_executor" }

# workspace 
libloading = { workspace = true }
log = { workspace = true }
tempdir = { workspace = true }
thiserror = { workspace = true }
futures-lite = { workspace = true }
async-io = { workspace = true }
async-lock = { workspace = true }

[target.'cfg(unix)'.dependencies]
cstr = "0.2.10"
libc = "0.2.129"
once_cell = "1.13.0"
proc-maps = "0.2.1"

[dev-dependencies]
cmd_lib = "1.3"
function_name = "0.3"
smol-potat = "1.1.2"

[build-dependencies]
const-gen = "1.2.0"
