[package]
name = "plugin_loader"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: consider async-ffi = "0.4.0"
core_executor = { path = "../core_executor" }
logger = { path = "../logger" }

# workspace 
libloading = { workspace = true }
tempdir = { workspace = true }
thiserror = { workspace = true }
async-io = { workspace = true }
async-lock = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.129"
once_cell = "1.13.0"
proc-maps = "0.3.1"

cstr = { workspace = true }

[dev-dependencies]
duct = { workspace = true }
syn = { version = "2", features = ["full"] }
quote = "1.0.10"
proc-macro2 = "1.0.54"
smol-potat = "1.1.2"
function_name = { workspace = true }

[build-dependencies]
const-gen = "1.2.0"
