[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
platform = { path = "../platform" }
world = { path = "../world" }
gfx = { path = "../gfx" }
logger = { path = "../logger" }

# workspace
async-lock = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
