[package]
name = "shader_objects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# explicitly need to *not* use the std features of bytemuck
bytemuck = { version = "1.13.1", default-features = false,  features = ["derive"] }
glam = { workspace = true }
