[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
gfx = { path = "../gfx" }
network = { path = "../network" }
input = { path = "../input" }
logger = { path = "../logger" }
plugin_self = { path = "../plugin_self" }
core_executor = { path = "../core_executor" }
heks = { path = "../heks" }
stable-typeid = { path = "../stable-typeid" }

# workspace deps
async-lock = { workspace = true }
glam = { workspace = true }
graphrox = { workspace = true }
thiserror= { workspace = true }
serde = { workspace = true }
paste = { workspace = true }
futures-util = { workspace = true }
futures-lite = { workspace = true }

[dev-dependencies]
smol-potat = "1.1.2"
rand = "0.8.4"
plotters = "0.3.4"
