[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
gfx = { path = "../gfx" }
network = { path = "../network" }
input = { path = "../input" }
logger = { path = "../logger" }
core_executor = { path = "../core_executor" }
heks = { path = "../heks", features = ["macros"] }
stable-typeid = { path = "../stable-typeid" }

# workspace deps
async-lock = { workspace = true }
glam = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
smol-potat = "1.1.2"
rand = "0.8.4"
plotters = "0.3.4"
plugin_self = { path = "../plugin_self" }
paste = { workspace = true }
futures-util = { workspace = true }
futures-lite = { workspace = true }
