[package]
name = "skybox_vertex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
shader_objects = { path = "../../../crates/shader_objects" }
# bytemuck = { version = "1.6.3", features = ["derive"] }
