[package]
name = "ash_renderer_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ash = "0.37.2"
async-io = "1.9.0"
async-channel = "1.7.1"
bytemuck = "1.12.1"
cstr = "0.2.10"
image = { version = "0.24.3", default-features = false, features=["png"] }
core_executor = { path = "../../core_executor" }
platform = {path = "../../platform" }
render = {path = "../../render" }
models = { path = "../../models" }
world = {path = "../../world" }
thiserror = "1.0.32"
