[package]
name = "ash_renderer_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
models = { path = "../../models" }
render = { path = "../../render" }
world = { path = "../../world" }
shader_objects = { path = "../../shader_objects" }

# workspace
ash = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
