[package]
name = "ash_renderer_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gfx = { path = "../../gfx" }
render = { path = "../../render" }
world = { path = "../../world" }
shader_objects = { path = "../../shader_objects" }
logger = { path = "../../logger" }
plugin_self = { path = "../../plugin_self" }
platform = { path = "../../platform" }

# workspace
ash = { workspace = true }
ash-window = { workspace = true } 
bytemuck = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }

# until which time this is inadequate and we want a better lib
spirv-reflect = { workspace = true }
