[package]
name = "asset_loader_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin_self = { path = "../../plugin_self" }
world = { path = "../../world" }
gfx = { path = "../../gfx" }
logger = { path = "../../logger" }
