[package]
name = "sdl2_input_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
input = { path = "../../input" }
thiserror = "1"
sdl2 = "0.35.2"
log = "0.4"

# TODO: convert to use just sdl2-sys or similar once we have a window that we want to be shared etc.
sdl2-sys = "0.35.2"
