[package]
name = "world_update_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

input = { path = "../../input" }
logger = { path = "../../logger" }
plugin_self = { path = "../../plugin_self" }
world = { path = "../../world" }

# workspace
rapier3d = { workspace = true}
glam = { workspace = true }
