[package]
name = "ash_renderer_system"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
gfx = { path = "../../gfx" }
render = { path = "../../render" }
world = { path = "../../world" }
shader_objects = { path = "../../shader_objects" }
logger = { path = "../../logger" }
platform = { path = "../../platform" }
stable-typeid = { path = "../../stable-typeid" }

# workspace
ash = { workspace = true }
ash-window = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
spirv-reflect = { workspace = true }
